#PROJECT(nmdepend C++)

cmake_minimum_required(VERSION 2.8)

#
# Options
#

OPTION(BUILD_TESTING "Build the testing tree." ON)
OPTION(STATIC "Link nmdepend statically" OFF)
#OPTION(COVERAGE "Coverage" OFF)

INCLUDE(local.cmake)

IF(STATIC)
  SET(CMAKE_EXE_LINKER_FLAGS "-static")
ENDIF(STATIC)

SET(CMAKE_MODULE_PATH ${PROJECT_SOURCE_DIR}/cmake)

#
# Testing
#

IF(BUILD_TESTING)
  INCLUDE (${CMAKE_ROOT}/Modules/Dart.cmake)
  ENABLE_TESTING()
#  IF (EXECUTABLE_OUTPUT_PATH)
#    SET (CXX_TEST_PATH ${EXECUTABLE_OUTPUT_PATH})
#  ELSE (EXECUTABLE_OUTPUT_PATH)
#    SET (CXX_TEST_PATH .)
#  ENDIF (EXECUTABLE_OUTPUT_PATH)
ENDIF(BUILD_TESTING)


SUBDIRS(
  src
  depend
  )
